# proueb_2025

./: .pdm-python  load_data.py  pyproject.toml  readme.md  readmeaufgabe2.md  sort.py
data/: person_db.json
docs/: uml_usecase.drawio
src/: analyze_activityData.py  load_data.py  main_ausgabe.py  power_curve.py  prob auswahl.py  test.py
